JVM设置初始堆大小和最大堆大小并打印GCDetails